# product-card-review

./: .editorconfig  .env.example  .gitignore  README.md  generate_defects.py  pyproject.toml
configs/: app.yaml  data.yaml  models.yaml
data/synthetic/: labels.csv
experiments/: README.md
experiments/defect_classification/: comparison.md
experiments/defect_classification/configs/: efficientnet_b0.yaml  resnet18.yaml
experiments/detection/: comparison.md
experiments/detection/configs/: rtdetr.yaml  yolov8.yaml  yolov9.yaml
experiments/image_quality/: comparison.md
experiments/image_quality/configs/: brisque.yaml  musiq.yaml
experiments/segmentation/: comparison.md
experiments/segmentation/configs/: deeplabv3plus.yaml  segformer_b0.yaml  unet.yaml
experiments/video/motion/: comparison.md
experiments/video/motion/configs/: farneback.yaml  klt_homography.yaml  raft.yaml
experiments/video/tracking/: comparison.md
experiments/video/tracking/configs/: bytetrack.yaml  deepsort.yaml
scripts/: generate_defects.py  make_splits.py  validate_dataset.py
src/card_checker/: __init__.py
src/card_checker/data/: dataset.py  loaders.py  transforms.py
tests/: test_dataset.py
