[project]
name = "product-card-checker"
version = "0.1.0"
description = "Multi-model system for checking product card images and videos"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "albumentations>=2.0",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "pandas>=2.2",
    "pillow>=10.4",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "torch>=2.3",
    "torchvision>=0.18",
    "tqdm>=4.66",
]

[project.optional-dependencies]
segmentation = [
    "segmentation-models-pytorch>=0.4",
    "timm>=1.0",
    "transformers>=4.45",
]
detection = [
    "ultralytics>=8.3",
]
tracking = [
    "deep-sort-realtime>=1.3",
    "supervision>=0.24",
]
iqa = [
    "pyiqa>=0.1.13",
]
ocr = [
    "easyocr>=1.7",
    "paddleocr>=2.9",
    "sentencepiece>=0.2",
    "transformers>=4.45",
]
moderation = [
    "nudenet>=3.4",
    "opennsfw2>=0.14",
]
embeddings = [
    "accelerate>=1.0",
    "open-clip-torch>=2.29",
    "sentencepiece>=0.2",
    "transformers>=4.45",
]
api = [
    "fastapi>=0.115",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.30",
]
worker = [
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "rq>=2.0",
]
dashboard = [
    "plotly>=5.24",
    "streamlit>=1.39",
]
export = [
    "onnx>=1.17",
    "onnxruntime>=1.20",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "card_checker"
module-root = "src"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["data", "artifacts"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
